2010-01-24  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/error.c: Use OCIErrorGet() to retrieve the error message
	    when the OCI return code is OCI_NO_DATA.
	    (reported by Raimonds Simanovskis)

2009-12-06  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/object.c: 1. fix segv when GC starts while initializing
	    a bind object for object type. (reported by Remi Gagnon)
	    2. fix memory leak about 30 bytes per one bind object for object
	    type.

2009-11-03  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/object.c: fix segv when binding a collection of string.
	    (reported by Raimonds Simanovskis)

2009-10-26  KUBO Takehiro  <kubo@jiubao.org>
	* NEW: fix typo.
	* dist-files, ext/oci8/.document: add ocihandle.c.
	* ext/oci8/ocihandle.c: add private methods OCIHandle#attr_get_*,
	    OCIHandle#attr_set_* and their rdoc comments.

2009-10-23  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb, ext/oci8/oci8.h, ext/oci8/oci8lib.c,
	  ext/oci8/ocihandle.c: add ocihandle.c and move OCIHandle
	    definitions from oci8lib.c to the file.

2009-10-21  KUBO Takehiro  <kubo@jiubao.org>
	* NEWS: add changes between 2.0.2 and 2.0.3.
	* VERSION, Makefile: change the version to 2.0.3.
	* ext/oci8/oci8.c: fix typo.
	* ext/oci8/apiwrap.yml: add OCIIntervalFromText() prototype.

2009-10-18  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/ocidatetime.c: Add workarounds for Oracle 9.2.0.1.
	* lib/oci8/datetime.rb: Change the unit of OCI8::BindType::IntervalDS
	    from day to second. Add OCI8::BindType::IntervalDS.unit and
	    OCI8::BindType::IntervalDS.unit=.
	* test/test_datetime.rb: Fix tests for the above changes.

2009-10-17  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.c: Add a workaround for Oracle 9.2.0.1 when clearing
	    a client identifier.
	* ext/oci8/oci8lib.c: Fix a segv when canceling a non-blocking
	    execution.
	* test_appinfo.rb: Fix temporarily to prevent a segmentation fault
	    under Oracle 9.2.0.1.